make login work again
git-svn-id: https://svn.liip.ch/repos/public/fluxcms/trunk@6697 99f7f646-bdd5-0310-89f9-ddcb10b10bf3

--- a/themes/standard/admin/login.html
+++ b/themes/standard/admin/login.html
@@ -34,7 +34,7 @@
             if (isset($_GET['back']) && $_GET['back']) {
                 print '<form method="post" action="'.htmlspecialchars($_GET['back']).'">';
             } else {
-              print '<form method="post" action="'.BX_WEBROOT.'admin/" name="login">';
+	      print '<form method="post" action="'.BX_WEBROOT.'admin/'. preg_replace("#^http.+/admin/(.*)$#","$1", str_replace("?logout","",htmlspecialchars(bx_helpers_uri::getRequestUri()))).'" name="login">';
             }
               
 
