made sitename clickable here as well
git-svn-id: https://svn.liip.ch/repos/public/fluxcms/trunk@7056 99f7f646-bdd5-0310-89f9-ddcb10b10bf3

--- a/themes/standard/admin/login.html
+++ b/themes/standard/admin/login.html
@@ -8,6 +8,7 @@
 
 <title>Flux CMS Admin - Login</title> 
 <?php 
+    echo '<link rel="stylesheet" type="text/css" href="'.BX_WEBROOT.'themes/standard/admin/css/head.css" media="screen"/>';
     echo '<link rel="stylesheet" type="text/css" href="'.BX_WEBROOT.'themes/standard/admin/css/login.css" media="screen"/>';
     
     ?>
@@ -15,7 +16,7 @@
 </head> 
 
 <body onload="document.login.username.focus()">
-<div id="top"><p class="logo">Flux CMS</p><?php print bx_helpers_config::getOption('sitename');?>
+<div id="top"><p class="logo">Flux CMS</p> <?php print '<a href="'.BX_WEBROOT.'" class="logolink">'. bx_helpers_config::getOption('sitename').'</a>';?>
 <br class="clr"/></div>
 <div id="container" >
 <?php 
