--- a/install/newsletter/data/newsletter/activation.en.xhtml
+++ b/install/newsletter/data/newsletter/activation.en.xhtml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <html xmlns:bx="http://bitflux.org/doctypes/bx" xmlns="http://www.w3.org/1999/xhtml">
-Dear {title} {lastname}
+Sehr geehrte{m:r} {m:Herr}{f:Frau} {lastname}
 
-You have registered yourself for our newsletter. Please click on the following link in order to activate your subscription:
+Sie haben sich für einen unserer Newsletter angemeldet. Bitte klicken Sie auf den folgenden Link um ihre Anmeldung zu bestätigen:
 
-http://bxcmsdemo:100/newsletter/index.html?activate={activation}
+{activate}
 </html>
