--- a/install/newsletter/data/newsletter/activation.en.xhtml
+++ b/install/newsletter/data/newsletter/activation.en.xhtml
@@ -1,8 +1,6 @@
-<?xml version="1.0" encoding="UTF-8" ?>
-<html xmlns:bx="http://bitflux.org/doctypes/bx" xmlns="http://www.w3.org/1999/xhtml">
-Sehr geehrte{m:r} {m:Herr}{f:Frau} {lastname}
+Dear {m:Mr}{f:Ms} {lastname}
 
-Sie haben sich für einen unserer Newsletter angemeldet. Bitte klicken Sie auf den folgenden Link um ihre Anmeldung zu bestätigen:
+You have registered yourself for our newsletter. Please click on the following link to confirm your subscription:
 
-{activate}
-</html>
+<{activate}>
+
