--- a/install/newsletter/data/newsletter/unsubscribe.en.xhtml
+++ b/install/newsletter/data/newsletter/unsubscribe.en.xhtml
@@ -11,7 +11,7 @@
 			<table border="0" id="unsubscribe">
 				<tr><td colspan="2"><h3>Unsubscribe</h3></td></tr>
 				<tr><td colspan="2"><span id="status"/></td></tr>
-				<tr><td>Email:</td><td><input type="text" name="email"/></td></tr>
+				<tr><td>Email:</td><td class="formgenerell"><input type="text" name="email"/></td></tr>
 				<tr>
 					<td></td>
 					<td><input type="submit" name="bx[plugins][newsletter][_all]" value="Send" class="formbutton"/></td>
