--- a/install/newsletter/data/newsletter/subscribe.de.xhtml
+++ b/install/newsletter/data/newsletter/subscribe.de.xhtml
@@ -11,9 +11,9 @@
     		<input type="hidden" name="subscribe"/>
 			<table border="0" id="subscribe">
 				<tr><td colspan="2"><span id="status"/></td></tr>
-				<tr><td>Vorname:</td><td><input type="text" name="field_firstname"/></td></tr>
-				<tr><td>Nachname:</td><td><input type="text" name="field_lastname"/></td></tr>
-				<tr><td>E-Mail:</td><td><input type="text" name="field_email"/></td></tr>
+				<tr><td>Vorname:</td><td class="formgenerell"><input type="text" name="field_firstname"/></td></tr>
+				<tr><td>Nachname:</td><td class="formgenerell"><input type="text" name="field_lastname"/></td></tr>
+				<tr><td>E-Mail:</td><td class="formgenerell"><input type="text" name="field_email"/></td></tr>
 				<tr><td>Anrede:</td>
 				<td>
 					<input type="radio" name="field_gender" value="0" checked="checked">Herr</input>
