--- a/install/newsletter/data/newsletter/subscribe.en.xhtml
+++ b/install/newsletter/data/newsletter/subscribe.en.xhtml
@@ -11,9 +11,9 @@
 			<table border="0" id="subscribe">
 				<tr><td colspan="2"><h3>Subscribe</h3></td></tr>
 				<tr><td colspan="2"><span id="status"/></td></tr>
-				<tr><td>Firstname:</td><td><input type="text" name="field_firstname"/></td></tr>
-				<tr><td>Lastname:</td><td><input type="text" name="field_lastname"/></td></tr>
-				<tr><td>Email:</td><td><input type="text" name="field_email"/></td></tr>
+				<tr><td>Firstname:</td><td class="formgenerell"><input type="text" name="field_firstname"/></td></tr>
+				<tr><td>Lastname:</td><td class="formgenerell"><input type="text" name="field_lastname"/></td></tr>
+				<tr><td>Email:</td><td class="formgenerell"><input type="text" name="field_email"/></td></tr>
 				<tr><td>Title:</td>
 				<td>
 					<input type="radio" name="field_gender" value="0" checked="checked">Mr.</input>
