--- a/install/newsletter/data/newsletter/unsubscribe.de.xhtml
+++ b/install/newsletter/data/newsletter/unsubscribe.de.xhtml
@@ -11,7 +11,7 @@
 			<input type="hidden" name="unsubscribe"/>
 			<table border="0" id="unsubscribe">
 				<tr><td colspan="2"><span id="status"/></td></tr>
-				<tr><td>E-Mail:</td><td><input type="text" name="email"/></td></tr>
+				<tr><td>E-Mail:</td><td class="formgenerell"><input type="text" name="email"/></td></tr>
 				<tr>
 					<td></td>
 					<td><input type="submit" name="bx[plugins][newsletter][_all]" value="Austragen" class="formbutton"/></td>
