git-svn-id: https://svn.liip.ch/repos/public/fluxcms/trunk@7120 99f7f646-bdd5-0310-89f9-ddcb10b10bf3

--- a/install/newsletter/data/newsletter/index.de.xhtml
+++ b/install/newsletter/data/newsletter/index.de.xhtml
@@ -6,7 +6,7 @@
 
     <body>
     <div id="content">
-		<h1>Newsletter</h1>
+		<h1>Anmelden</h1>
     	<form name="bx_news_subscribe" action="#" method="post">
     		<input type="hidden" name="subscribe"/>
 			<table border="0" id="subscribe">
