--- a/install/newsletter/data/newsletter/unsubscribe.de.xhtml
+++ b/install/newsletter/data/newsletter/unsubscribe.de.xhtml
@@ -6,7 +6,7 @@
 
     <body>
     <div id="content">
-		<h1>Newsletter</h1>
+		<h1>Abmelden</h1>
 		<form name="bx_news_unsubscribe" action="#" method="post">
 			<input type="hidden" name="unsubscribe"/>
 			<table border="0" id="unsubscribe">
