--- a/install/newsletter/data/newsletter/unsubscribe.en.xhtml
+++ b/install/newsletter/data/newsletter/unsubscribe.en.xhtml
@@ -6,10 +6,10 @@
 
     <body>
     <div id="content">
+    	<h1>Unsubscribe</h1>
 		<form name="bx_news_unsubscribe" action="#" method="post">
 			<input type="hidden" name="unsubscribe"/>
 			<table border="0" id="unsubscribe">
-				<tr><td colspan="2"><h3>Unsubscribe</h3></td></tr>
 				<tr><td colspan="2"><span id="status"/></td></tr>
 				<tr><td>Email:</td><td class="formgenerell"><input type="text" name="email"/></td></tr>
 				<tr>
