--- a/install/newsletter/data/newsletter/subscribe.de.xhtml
+++ b/install/newsletter/data/newsletter/subscribe.de.xhtml
@@ -6,7 +6,7 @@
 
     <body>
     <div id="content">
-		<h1>Newsletter</h1>
+		<h1>Anmelden</h1>
     	<form name="bx_news_subscribe" action="#" method="post">
     		<input type="hidden" name="subscribe"/>
 			<table border="0" id="subscribe">
