--- a/install/newsletter/data/newsletter/subscribe.en.xhtml
+++ b/install/newsletter/data/newsletter/subscribe.en.xhtml
@@ -6,10 +6,10 @@
 
     <body>
     <div id="content">
+    	<h1>Subscribe</h1>
     	<form name="bx_news_subscribe" action="#" method="post">
     		<input type="hidden" name="subscribe"/>
 			<table border="0" id="subscribe">
-				<tr><td colspan="2"><h3>Subscribe</h3></td></tr>
 				<tr><td colspan="2"><span id="status"/></td></tr>
 				<tr><td>Firstname:</td><td class="formgenerell"><input type="text" name="field_firstname"/></td></tr>
 				<tr><td>Lastname:</td><td class="formgenerell"><input type="text" name="field_lastname"/></td></tr>
