--- a/webinc/fck/editor/fckdialog.html
+++ b/webinc/fck/editor/fckdialog.html
@@ -32,7 +32,9 @@ if ( !window.dialogArguments )
 document.write( '<link href="' + window.dialogArguments.Editor.FCKConfig.SkinPath + 'fck_dialog.css" type="text/css" rel="stylesheet">' ) ;
 
 // Sets the language direction.
-window.document.dir = window.dialogArguments.Editor.FCKLang.Dir ;
+if ( window.dialogArguments.Editor.FCKLang) {
+    window.document.dir = window.dialogArguments.Editor.FCKLang.Dir ;
+}
 
 var sTitle = window.dialogArguments.Title ;
 document.write( '<title>' + sTitle + '<\/title>' ) ;
@@ -46,7 +48,9 @@ function LoadInnerDialog()
 		window.onresize() ;
 
 	// First of all, translate the dialog box contents.
-	window.dialogArguments.Editor.FCKLanguageManager.TranslatePage( document ) ;
+    if (window.dialogArguments.Editor.FCKLanguageManager) {
+	    window.dialogArguments.Editor.FCKLanguageManager.TranslatePage( document ) ;
+    }
 
 	window.frames["frmMain"].document.location.href = window.dialogArguments.Page ;
 }
@@ -56,7 +60,9 @@ function InnerDialogLoaded()
 	var oInnerDoc = document.getElementById('frmMain').contentWindow.document ;
 
 	// Set the language direction.
-	oInnerDoc.dir = window.dialogArguments.Editor.FCKLang.Dir ;
+    if (window.dialogArguments.Editor.FCKLang) {
+	    oInnerDoc.dir = window.dialogArguments.Editor.FCKLang.Dir ;
+    }
 
 	// Sets the Skin CSS.
 	oInnerDoc.write( '<link href="' + window.dialogArguments.Editor.FCKConfig.SkinPath + 'fck_dialog.css" type="text/css" rel="stylesheet">' ) ;
