--- a/webinc/fck/editor/filemanager/browser/default/frmfolders.html
+++ b/webinc/fck/editor/filemanager/browser/default/frmfolders.html
@@ -29,18 +29,6 @@ var sActiveFolder ;
 var bIsLoaded = false ;
 var iIntervalId ;
 
-// copied from browser.html
-function GetUrlParam( paramName )
-{
-	var oRegex = new RegExp( '[\?&]' + paramName + '=([^&]+)', 'i' ) ;
-	var oMatch = oRegex.exec( window.top.location.search ) ;
-	
-	if ( oMatch && oMatch.length > 1 )
-		return oMatch[1] ;
-	else
-		return '' ;
-}
-
 var oListManager = new Object() ;
 
 oListManager.Init = function()
@@ -142,7 +130,7 @@ function LoadFolders( folderPath )
 	// Clear the folders list.
 	oListManager.Clear() ;
 
-// Get the parent folder path.
+	// Get the parent folder path.
 	var sParentFolderPath ;
 	if ( folderPath != '/' )
 		sParentFolderPath = folderPath.substring( 0, folderPath.lastIndexOf( '/', folderPath.length - 2 ) + 1 ) ;
@@ -189,12 +177,7 @@ function SetResourceType( type )
 window.onload = function()
 {
 	oListManager.Init() ;
-    var folder = '/';
-    var sRootPath = GetUrlParam('RootPath') ;
-    if ( sRootPath.length > 0 )
-            folder = sRootPath;
-
-	LoadFolders(folder) ;
+	LoadFolders( '/' ) ;
 }
 		</script>
 	</head>
