--- a/webinc/fck/editor/filemanager/browser/default/frmfolders.html
+++ b/webinc/fck/editor/filemanager/browser/default/frmfolders.html
@@ -29,6 +29,19 @@ var sActiveFolder ;
 var bIsLoaded = false ;
 var iIntervalId ;
 
+// copied from browser.html
+function GetUrlParam( paramName )
+{
+	var oRegex = new RegExp( '[\?&]' + paramName + '=([^&]+)', 'i' ) ;
+	var oMatch = oRegex.exec( window.top.location.search ) ;
+	
+	if ( oMatch && oMatch.length > 1 )
+		return oMatch[1] ;
+	else
+		return '' ;
+}
+
+
 var oListManager = new Object() ;
 
 oListManager.Init = function()
@@ -177,7 +190,13 @@ function SetResourceType( type )
 window.onload = function()
 {
 	oListManager.Init() ;
-	LoadFolders( '/' ) ;
+    var folder = '/';
+    var sRootPath = GetUrlParam('RootPath') ;
+    if ( sRootPath.length > 0 )
+            folder = sRootPath;
+
+	LoadFolders(folder) ;
+	
 }
 		</script>
 	</head>
