fix subdir problems on login redirect
git-svn-id: https://svn.liip.ch/repos/public/fluxcms/trunk@8600 99f7f646-bdd5-0310-89f9-ddcb10b10bf3

--- a/themes/standard/admin/login.html
+++ b/themes/standard/admin/login.html
@@ -1,11 +1,19 @@
 <?php
 
 if (!empty($_GET['back'])) {
+    //remove path from BX_WEBROOT from back (for subdir installations);    
+    $urlp = parse_url(BX_WEBROOT);
+    if (isset($urlp['path'])) {
+      $_GET['back'] = preg_replace("#^/*".$urlp['path']."#","",$_GET['back']);  
+    }
     //remove webroot and add it again, so that we don't get redirected to something else..
+    
     $_GET['back'] = BX_WEBROOT. preg_replace("#^".BX_WEBROOT."#",'',$_GET['back']);
+
     $_GET['back'] = preg_replace("#.loginerror=1#",'',$_GET['back']);
         
 }
+
 
 if (!empty($_POST) && isset($_POST['username'])) {
     if (!empty($_GET['back'])) {
