Little Slash at the end of the link
git-svn-id: https://svn.liip.ch/repos/public/fluxcms/trunk@8916 99f7f646-bdd5-0310-89f9-ddcb10b10bf3

--- a/themes/standard/admin/login.html
+++ b/themes/standard/admin/login.html
@@ -181,7 +181,7 @@ EOT;
   <br />
   
   <br /><br />
-      <label>&#160;</label>		<p>$lost <a href="./webinc/lostpw">$newone</a></p>
+      <label>&#160;</label>		<p>$lost <a href="./webinc/lostpw/">$newone</a></p>
 	
 	  
 	</fieldset>
