--- a/webinc/fck/editor/fckeditor.html
+++ b/webinc/fck/editor/fckeditor.html
@@ -2,18 +2,18 @@
 <!--
  * FCKeditor - The text editor for internet
  * Copyright (C) 2003-2006 Frederico Caldeira Knabben
- * 
+ *
  * Licensed under the terms of the GNU Lesser General Public License:
  * 		http://www.opensource.org/licenses/lgpl-license.php
- * 
+ *
  * For further information visit:
  * 		http://www.fckeditor.net/
- * 
+ *
  * "Support Open Source software. What about a donation today?"
- * 
+ *
  * File Name: fckeditor.html
  * 	Main page that holds the editor.
- * 
+ *
  * File Authors:
  * 		Frederico Caldeira Knabben (fredck@fckeditor.net)
 -->
@@ -32,7 +32,7 @@
 
 function LoadScript( url )
 {
-	document.write( '<script type="text/javascript" src="' + url + '" onerror="alert(\'Error loading \' + this.src);"><\/script>' ) ;
+	document.write( '<script type="text/javascript" src="' + url + '?v=1.2" onerror="alert(\'Error loading \' + this.src);"><\/script>' ) ;
 }
 
 function LoadCss( url )
@@ -92,7 +92,7 @@ FCKPlugins.Load() ;
 
 	</script>
 	<script type="text/javascript">
-	
+
 // Set the editor interface direction.
 window.document.dir = FCKLang.Dir ;
 
@@ -121,7 +121,7 @@ function LoadToolbarSetup()
 function LoadToolbar()
 {
 	var oToolbarSet = FCK.ToolbarSet = FCKToolbarSet_Create() ;
-	
+
 	if ( oToolbarSet.IsLoaded )
 		StartEditor() ;
 	else
@@ -153,10 +153,10 @@ function WaitForActive( editorInstance, newStatus )
 
 		FCK.SetStatus( FCK_STATUS_COMPLETE ) ;
 
-		// Call the special "FCKeditor_OnComplete" function that should be present in 
+		// Call the special "FCKeditor_OnComplete" function that should be present in
 		// the HTML page where the editor is located.
 		if ( typeof( window.parent.FCKeditor_OnComplete ) == 'function' )
-			window.parent.FCKeditor_OnComplete( FCK ) ;	
+			window.parent.FCKeditor_OnComplete( FCK ) ;
 	}
 }
 
