added versioning support
git-svn-id: https://svn.liip.ch/repos/public/fluxcms_demo/trunk@9240 99f7f646-bdd5-0310-89f9-ddcb10b10bf3

--- a/data/index.en.xhtml
+++ b/data/index.en.xhtml
@@ -1,29 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <html xmlns:bx="http://bitflux.org/doctypes/bx" xmlns="http://www.w3.org/1999/xhtml" xmlns:forms="http://bitflux.org/forms" xmlns:php="http://php.net/xsl"><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8" /><title>Prototype Test</title></head><body>
-<div id="content">  <h1>Welcome to your Flux CMS installation</h1>
+muglyfoo!
 
-                  <p>This is now your very own Flux CMS installation.</p>
-
-<p>You can now log in to the <a href="./admin/">admin interface</a> and administrate your installation
-</p>
-<p>If you need help, you can look in different places:</p>
-<ul>
-<li>The <a href="http://docs.flux-cms.org/en/start/">Getting Started with Flux CMS</a> Guide, giving you an overview of what you can do with Flux CMS and how you do that.</li>
-
-<li><a href="http://docs.flux-cms.org/en/user/">Documentation to Flux CMS for endusers</a>
- (also <a href="http://docs.flux-cms.org/user/">in german</a>)</li>
-<li>The <a href="http://forum.freeflux.net/">Freeflux Forum</a></li>
-<li>The <a href="http://devblog.flux-cms.org/">Flux CMS Developement Blog</a></li>
-<li>The <a href="http://wiki.flux-cms.org/">Flux CMS Wiki</a></li>
-<li><a href="http://wiki.flux-cms.org/Support">Our mailinglist and further support places, like IRC</a></li>
-<li>The <a href="http://freeflux.net/help/"> Freeflux Help Page</a>, all the links from above and more</li>
-</ul>
-
-<p>But now, we hope you enjoy  Flux CMS and we'd really like to hear from you what you think about it . </p>
-<p>The Flux CMS Team</p>
-<p>PS: If you want to have <b>the blog here on the start page</b>, then the easiest way is the following:
-Go into the admin, click on "home" on the left side, then "Edit properties" in the "Collection" box and put "/blog/index.html" into the bx::redirect field. That's it.
-</p>
-</div>
+<p>moooh</p>
 </body></html>
