--- a/data/contact/thanks.en.xhtml
+++ b/data/contact/thanks.en.xhtml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" ?>
+
 <html xmlns:bx="http://bitflux.org/doctypes/bx" xmlns="http://www.w3.org/1999/xhtml"><head><title>Prototype Test</title></head><body>
-	
+	<h1>Thanks</h1>
 
 <p>Thanks for your message. We will get in contact with you as soon as possible.</p>
 	
