--- a/data/contact/thanks.de.xhtml
+++ b/data/contact/thanks.de.xhtml
@@ -1,2 +1,8 @@
-<html xmlns:bx="http://bitflux.org/doctypes/bx" xmlns="http://www.w3.org/1999/xhtml"><head><title>Prototype Test</title></head><body xmlns="http://www.w3.org/1999/xhtml"><h1 xmlns="http://www.w3.org/1999/xhtml">Danke</h1>
-<p xmlns="http://www.w3.org/1999/xhtml">Besten Dank für Ihre MitteiluIhnen so schnell wie möglich melden.</p></body></html>
+<?xml version="1.0" encoding="UTF-8" ?>
+
+<html xmlns:bx="http://bitflux.org/doctypes/bx" xmlns="http://www.w3.org/1999/xhtml"><head><title>Prototype Test</title></head><body>
+	<h1>Danke</h1>
+
+<p>Besten Dank f&#252;r Ihre Mitteilung. Wir werden uns bei Ihnen so schnell wie m&#246;glich melden.</p>
+	
+</body></html>
