fix some FF3 issues
git-svn-id: https://svn.liip.ch/repos/public/fluxcms/trunk@10479 99f7f646-bdd5-0310-89f9-ddcb10b10bf3

--- a/themes/standard/admin/index.html
+++ b/themes/standard/admin/index.html
@@ -7,7 +7,7 @@
 </script>
 <script src="webinc/js/bx/helpers.js">
 </script>
-<script src="webinc/js/sarissa.js">
+<script src="webinc/js/sarissa_0.9.9.4.js">
 </script>
 </head>
 <frameset
