use BUILD_DATE instead of REVISION for more meaningful figures
git-svn-id: https://svn.liip.ch/repos/public/fluxcms/trunk@10589 99f7f646-bdd5-0310-89f9-ddcb10b10bf3

--- a/themes/standard/admin/login.html
+++ b/themes/standard/admin/login.html
@@ -192,7 +192,7 @@ EOT;
  
 ?>
  <p class="version">
- <a href="http://www.flux-cms.org"><b>Flux CMS</b></a> Version: <?php echo BXCMS_VERSION.'/'.BXCMS_REVISION; ?><br />
+ <a href="http://www.flux-cms.org"><b>Flux CMS</b></a> Version: <?php echo BXCMS_VERSION.'/'.BXCMS_BUILD_DATE; ?><br />
  Free Software released under the GNU/GPL License</p>
 
 </div>
