--- a/webinc/fck/editor/dialog/fck_spellerpages.html
+++ b/webinc/fck/editor/dialog/fck_spellerpages.html
@@ -53,6 +53,7 @@ function oSpeller_OnFinished( numberOCorrections )
 {
 	if ( numberOCorrections > 0 )
 	{
+		oEditor.FCKUndo.SaveUndoStep() ;
 		oEditor.FCK.EditorDocument.body.innerHTML = document.getElementById('txtHtml').value ;
 		if ( oEditor.FCKBrowserInfo.IsIE )
 			oEditor.FCKSelection.Collapse( true ) ;
